Fixed DatawarehouseBuilderImpl*